--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "React component to make fixed:bottom styles usable in Safari mobile",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
-    "build": "parcel build src/index.js",
-    "demo": "parcel demo/index.html"
+    "build": "yarn clean; NODE_ENV=production yarn bundle",
+    "bundle": "parcel build src/index.js --global react-fixed-bottom --target browser",
+    "clean": "rimraf dist",
+    "demo": "parcel demo/index.html",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,7 @@
     "react": "^16.5.0"
   },
   "dependencies": {
+    "dist": "^0.1.2",
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.6.1"
   },
@@ -41,14 +44,15 @@
     "babel-jest": "^24.7.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
-    "husky": ">=1",
+    "husky": "^1.3.1",
     "jest": "^24.7.1",
     "lint-staged": ">=8",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "rimraf": "^2.6.3"
   },
   "husky": {
     "hooks": {
