--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,5 @@
 language: node_js
+node_js:
+  - "10"
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.15.2
