--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.5",
   "description": "React component to make fixed:bottom styles usable in Safari mobile",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "engines": {
     "node": "^10.15.0",
     "yarn": "^1.15.0"
   },
   "scripts": {
-    "build": "yarn clean; NODE_ENV=production yarn bundle",
-    "bundle": "parcel build src/index.js --global react-fixed-bottom --target browser",
+    "build": "rollup -c",
     "clean": "rimraf dist",
-    "demo": "yarn build; parcel demo/index.html --out-dir dist/demo",
-    "test": "jest"
+    "test": "jest",
+    "watch": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -36,26 +36,39 @@
     "react": "^16.5.0"
   },
   "dependencies": {
-    "lodash.throttle": "^4.1.1",
-    "prop-types": "^15.6.1"
+    "lodash.throttle": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/jest": "^24.0.17",
+    "@types/lodash.throttle": "^4.1.6",
+    "@types/react": "^16.9.2",
+    "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.7.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
     "lint-staged": ">=8",
-    "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0",
+    "prop-types": "^15.6.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-test-renderer": "^16.8.6",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-resolve": "^0.0.1-predev.1",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-terser": "^5.1.1",
+    "rollup-plugin-typescript2": "^0.22.1",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
